syntax = "proto3";

option go_package = "serverside/db/server/grpc";

service Server {
  rpc GetValue(GetValueRequest) returns (GetValueResponse) {}
  rpc SetValue(SetValueRequest) returns (SetValueResponse) {}
}

message GetValueRequest {
  string key = 1;
}

message GetValueResponse {
  string value = 1;
}

message SetValueRequest {
  string key = 1;
  string value = 2;
}

message SetValueResponse {
}
